clusters/rpi-cluster/manifests/loki/loki-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki
  namespace: loki
spec:
  parentRefs:
    - name: main-gateway
      namespace: default
      sectionName: https-fivelabs
  hostnames:
    - loki.fivelabs.tech
  rules:
    - matches:
        - path: { type: PathPrefix, value: / }
      backendRefs:
        - name: loki
          port: 3100
